--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -1,17 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <AssemblyName>Autokool.Data</AssemblyName>
-    <RootNamespace>Autokool.Data</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Diagrams\" />
   </ItemGroup>
 
 </Project>
