--- a/Aids/Aids.csproj
+++ b/Aids/Aids.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>Autokool.Aids</AssemblyName>
+    <RootNamespace>Autokool.Aids</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
