--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>Autokool.Core</AssemblyName>
+    <RootNamespace>Autokool.Core</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
