--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>Autokool.Data</AssemblyName>
+    <RootNamespace>Autokool.Data</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
