--- a/Facade/Facade.csproj
+++ b/Facade/Facade.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>Autokool.Facade</AssemblyName>
+    <RootNamespace>Autokool.Facade</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
