--- a/Pages/Pages.csproj
+++ b/Pages/Pages.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>Autokool.Pages</AssemblyName>
+    <RootNamespace>Autokool.Pages</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
