Infra Common Repod

--- a/Infra/Infra.csproj
+++ b/Infra/Infra.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Facade\Facade.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AutoKool\" />
+  </ItemGroup>
+
 </Project>
