--- a/Pages/Pages.csproj
+++ b/Pages/Pages.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Infra\Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Autokool\Teacher\" />
+  </ItemGroup>
+
 </Project>
