Profiili moodi asi/ edit ei toota ja full name vaja korda saada

--- a/Pages/Pages.csproj
+++ b/Pages/Pages.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Autokool\Teacher\" />
+    <Folder Include="Autokool\Teachers\" />
   </ItemGroup>
 
 </Project>
