--- a/Soft/Soft.csproj
+++ b/Soft/Soft.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Administrator\Pages\asd\" />
+    <Folder Include="Areas\Administrator\Pages\dewd\" />
     <Folder Include="Areas\Teacher\" />
     <Folder Include="Pages\CoursesPage\" />
   </ItemGroup>
